--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,3 +19,69 @@
 .usermotto {
   margin-top: 200px;
 }
+.shop {
+  width: 100%;
+  height: 300rpx;
+}
+.shop image{
+  width: 300rpx;
+  height: 300rpx;
+}
+.goods_name{
+  margin-top: -300rpx;
+  margin-left: 300rpx;
+}
+.shop_price{
+  margin-left: 300rpx;
+}
+.daoheng{
+  width: 100%;
+  height: 40px;
+}
+
+
+.navbg{
+  background-color: #F6F5F3;
+  height: 36px;
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.nav{
+  width: 85%;
+  height: 36px;
+}
+.add{
+  width: 15%;
+  height: 50px;
+  line-height: 50px;
+  text-align: right;
+  margin-right: 10px;
+  font-size: 50px;
+}
+.scroll-view_H{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 5px;
+}
+.normal{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 14px;
+}
+.select{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  color: skyblue;
+}
+
